@@ -4,6 +4,9 @@ Changelog
 1.0.6 - unreleased
 ------------------
 
+- Adds portlet migration functions.
+  [JOse Dinuncio]
+
 - Cleans setup.py [11080].
   [Jose Dinuncio]
 
